<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxWidth="120dp"
            android:adjustViewBounds="true"
            android:src="@drawable/lastfm_logo_red"
            android:contentDescription="@string/lastfm_login_lastfm_icon" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/lastfm_login_login_edit_text"
            style="?lastFmLoginEditText"
            android:hint="@string/lastfm_login_hint"
            android:inputType="textWebEmailAddress" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/lastfm_login_password_edit_text"
            style="?lastFmLoginEditText"
            android:hint="@string/lastfm_password_hint"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/lastfm_login_login_button"
            style="?lastFmLoginEditButton"
            android:text="@string/lastfm_login_button"
            android:enabled="false"/>

    </LinearLayout>

</ScrollView>
