<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0">

        <LinearLayout style="?settingsCategoryTitle">

            <com.artemzin.android.wail.ui.TypefaceTextView
                style="?settingsCategoryTitleTitle"
                android:text="@string/settings_sound_notifications_main_title" />

            <com.artemzin.android.wail.ui.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/settings_padding_right_and_left"
                android:paddingRight="@dimen/settings_padding_right_and_left"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textSize="13sp"
                android:textColor="@color/light_theme_text_secondary"
                android:text="@string/settings_sound_notifications_pro_tip" />

            <View style="?settingsCategoryTitleDivider" />

        </LinearLayout>

        <TableRow
            android:id="@+id/settings_sound_notifications_track_marked_as_scrobbled"
            style="?settingsItemWithSwitch">

            <com.artemzin.android.wail.ui.TypefaceTextView
                style="?settingsItemTitleWithSwitch"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/settings_notifications_track_scrobbled" />

            <Switch
                android:id="@+id/settings_sound_notifications_track_marked_as_scrobbled_switch"
                style="?settingsItemSwitch" />

        </TableRow>

        <View style="?settingsCategoryTitleDivider" />

        <TableRow
            android:id="@+id/settings_sound_notifications_track_skipped"
            style="?settingsItemWithSwitch">

            <com.artemzin.android.wail.ui.TypefaceTextView
                style="?settingsItemTitleWithSwitch"
                android:text="@string/settings_track_was_skipped" />

            <Switch
                android:id="@+id/settings_sound_notifications_track_skipped_switch"
                style="?settingsItemSwitch" />

        </TableRow>

    </TableLayout>

</ScrollView>